cluster/homelab/apps/prod-environment/ctf-site/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ctf-site
  namespace: prod-environment
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-dev-ip-list@kubernetescrd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`isp.uwstout.club`)
      kind: Rule
      services:
        - name: ctf-site
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  # tls:
  #   secretName: uwstout-club-tls
